add y_train data

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"tuple\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32md:\\Fadel\\Perkuliahan\\Semester 5\\KK F (Kecerdasan Komputasional)\\Final Project\\image-processing-using-cnn\\main.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 42>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Fadel/Perkuliahan/Semester%205/KK%20F%20%28Kecerdasan%20Komputasional%29/Final%20Project/image-processing-using-cnn/main.ipynb#W1sZmlsZQ%3D%3D?line=39'>40</a>\u001b[0m y_train \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray([weatherTrain(index) \u001b[39mfor\u001b[39;00m index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39m1600\u001b[39m)], dtype\u001b[39m=\u001b[39m\u001b[39mint\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Fadel/Perkuliahan/Semester%205/KK%20F%20%28Kecerdasan%20Komputasional%29/Final%20Project/image-processing-using-cnn/main.ipynb#W1sZmlsZQ%3D%3D?line=40'>41</a>\u001b[0m y_train\u001b[39m.\u001b[39mreshape(\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m,)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Fadel/Perkuliahan/Semester%205/KK%20F%20%28Kecerdasan%20Komputasional%29/Final%20Project/image-processing-using-cnn/main.ipynb#W1sZmlsZQ%3D%3D?line=41'>42</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39;49m\u001b[39mshape: \u001b[39;49m\u001b[39m\"\u001b[39;49m \u001b[39m+\u001b[39;49m y_train\u001b[39m.\u001b[39;49mshape \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m, y_train)\n",
+      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"tuple\") to str"
+     ]
+    }
+   ],
    "source": [
     "# weather mapping function\n",
     "def weatherName(i):\n",
@@ -65,7 +77,12 @@
     "    elif (i < 1400):\n",
     "        return 7\n",
     "    else:\n",
-    "        return 8"
+    "        return 8\n",
+    "\n",
+    "# mapping results for training data (y_train)\n",
+    "y_train = np.array([weatherTrain(index) for index in range(0, 1600)], dtype=int)\n",
+    "y_train.reshape(-1,)\n",
+    "print(\"shape: \" + y_train.shape + \" \", y_train)\n"
    ]
   }
  ],
