data image preprocessing

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     "    else:\n",
     "        return 8\n",
     "\n",
-    "# mapping results for training data (y_train)\n",
+    "# mapping for data training results (y_train)\n",
     "y_train = np.array([weatherTrain(index) for index in range(0, 1600)], dtype=int)\n",
     "y_train.reshape(-1,)\n",
     "print(y_train.shape, y_train)\n"
@@ -83,14 +83,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# data image preprocessing\n",
     "# input training dataset to numpy array\n",
     "dew = np.array([resize(np.array(Image.open('./Train/dew/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/dew')], dtype=float)\n",
     "\n",
-    "fogsmog = np.array([resize(np.array(Image.open('./Train/fogsmog/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/fogsmog')], dtype=float)\n"
+    "fogsmog = np.array([resize(np.array(Image.open('./Train/fogsmog/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/fogsmog')], dtype=float)\n",
+    "\n",
+    "join = np.append(dew, fogsmog,  0)\n",
+    "\n",
+    "hail = np.array([resize(np.array(Image.open('./Train/hail/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/hail')], dtype=float)\n",
+    "\n",
+    "join = np.append(join, hail,  0)\n",
+    "\n",
+    "lightning = np.array([resize(np.array(Image.open('./Train/lightning/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/lightning')], dtype=float)\n",
+    "\n",
+    "join = np.append(join, lightning,  0)\n",
+    "\n",
+    "rain = np.array([resize(np.array(Image.open('./Train/rain/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/rain')], dtype=float)\n",
+    "\n",
+    "join = np.append(join, rain,  0)\n",
+    "\n",
+    "rainbow = np.array([resize(np.array(Image.open('./Train/rainbow/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/rainbow')], dtype=float)\n",
+    "\n",
+    "join = np.append(join, rainbow,  0)\n",
+    "\n",
+    "sandstorm = np.array([resize(np.array(Image.open('./Train/sandstorm/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/sandstorm')], dtype=float)\n",
+    "\n",
+    "join = np.append(join, sandstorm,  0)\n",
+    "\n",
+    "snow = np.array([resize(np.array(Image.open('./Train/snow/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/snow')], dtype=float)\n",
+    "\n",
+    "# mapping for data training (X_train)\n",
+    "X_train = np.append(join, snow,  0)"
    ]
   }
  ],
@@ -110,7 +138,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
