--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1600, 150, 200, 3) (1600,)\n"
+     ]
+    }
+   ],
    "source": [
     "# data image preprocessing\n",
     "# input training dataset to numpy array\n",
@@ -118,7 +126,10 @@
     "snow = np.array([resize(np.array(Image.open('./Train/snow/' + filename)) ,(150,200,3)) for filename in os.listdir('./Train/snow')], dtype=float)\n",
     "\n",
     "# mapping for data training (X_train)\n",
-    "X_train = np.append(join, snow,  0)"
+    "X_train = np.append(join, snow,  0)\n",
+    "\n",
+    "# check data training shape\n",
+    "print(X_train.shape, y_train.shape)"
    ]
   }
  ],
