--- a/main.ipynb
+++ b/main.ipynb
@@ -131,6 +131,34 @@
     "# check data training shape\n",
     "print(X_train.shape, y_train.shape)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# cnn model\n",
+    "cnn = models.Sequential([\n",
+    "    layers.Conv2D(filters=32, kernel_size=(3, 3), activation='relu', input_shape=(150, 200, 3)),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    \n",
+    "    layers.Conv2D(filters=64, kernel_size=(3, 3), activation='relu'),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "\n",
+    "    layers.Conv2D(filters=128, kernel_size=(3, 3), activation='relu'),\n",
+    "    layers.Dropout(0.25),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "\n",
+    "    layers.Conv2D(filters=256, kernel_size=(3, 3), activation='relu'),\n",
+    "    layers.Dropout(0.25),\n",
+    "    layers.MaxPooling2D((2, 2)),\n",
+    "    \n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(256, activation='relu'),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
   }
  ],
  "metadata": {
@@ -149,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
