--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -134,9 +134,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "50/50 [==============================] - 24s 467ms/step - loss: 1.6545 - accuracy: 0.4019\n",
+      "Epoch 2/20\n",
+      "50/50 [==============================] - 23s 451ms/step - loss: 1.1625 - accuracy: 0.6000\n",
+      "Epoch 3/20\n",
+      "50/50 [==============================] - 23s 460ms/step - loss: 0.9492 - accuracy: 0.6919\n",
+      "Epoch 4/20\n",
+      "50/50 [==============================] - 23s 455ms/step - loss: 0.7969 - accuracy: 0.7362\n",
+      "Epoch 5/20\n",
+      "50/50 [==============================] - 23s 461ms/step - loss: 0.7237 - accuracy: 0.7613\n",
+      "Epoch 6/20\n",
+      "50/50 [==============================] - 23s 453ms/step - loss: 0.6467 - accuracy: 0.7856\n",
+      "Epoch 7/20\n",
+      "50/50 [==============================] - 23s 453ms/step - loss: 0.5768 - accuracy: 0.7937\n",
+      "Epoch 8/20\n",
+      "50/50 [==============================] - 23s 454ms/step - loss: 0.5014 - accuracy: 0.8319\n",
+      "Epoch 9/20\n",
+      "50/50 [==============================] - 23s 452ms/step - loss: 0.4256 - accuracy: 0.8619\n",
+      "Epoch 10/20\n",
+      "50/50 [==============================] - 23s 461ms/step - loss: 0.3772 - accuracy: 0.8719\n",
+      "Epoch 11/20\n",
+      "50/50 [==============================] - 23s 464ms/step - loss: 0.3713 - accuracy: 0.8719\n",
+      "Epoch 12/20\n",
+      "50/50 [==============================] - 22s 447ms/step - loss: 0.3274 - accuracy: 0.8938\n",
+      "Epoch 13/20\n",
+      "50/50 [==============================] - 22s 444ms/step - loss: 0.2251 - accuracy: 0.9262\n",
+      "Epoch 14/20\n",
+      "50/50 [==============================] - 22s 447ms/step - loss: 0.1867 - accuracy: 0.9331\n",
+      "Epoch 15/20\n",
+      "50/50 [==============================] - 22s 448ms/step - loss: 0.1528 - accuracy: 0.9481\n",
+      "Epoch 16/20\n",
+      "50/50 [==============================] - 22s 449ms/step - loss: 0.1637 - accuracy: 0.9438\n",
+      "Epoch 17/20\n",
+      "50/50 [==============================] - 22s 449ms/step - loss: 0.1532 - accuracy: 0.9481\n",
+      "Epoch 18/20\n",
+      "50/50 [==============================] - 22s 448ms/step - loss: 0.0965 - accuracy: 0.9656\n",
+      "Epoch 19/20\n",
+      "50/50 [==============================] - 23s 469ms/step - loss: 0.1014 - accuracy: 0.9663\n",
+      "Epoch 20/20\n",
+      "50/50 [==============================] - 23s 453ms/step - loss: 0.1919 - accuracy: 0.9381\n"
+     ]
+    }
+   ],
    "source": [
     "# cnn model\n",
     "cnn = models.Sequential([\n",
@@ -157,7 +204,16 @@
     "    layers.Flatten(),\n",
     "    layers.Dense(256, activation='relu'),\n",
     "    layers.Dense(10, activation='softmax')\n",
-    "])"
+    "])\n",
+    "\n",
+    "\n",
+    "# using adam for optimizer function and sparse categorical crossentropy for loss function \n",
+    "cnn.compile(optimizer='adam',\n",
+    "              loss='sparse_categorical_crossentropy', \n",
+    "              metrics=['accuracy'])\n",
+    "              \n",
+    "# using 20 epochs\n",
+    "history = cnn.fit(X_train, y_train, epochs=20)"
    ]
   }
  ],
@@ -177,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
