--- a/main.ipynb
+++ b/main.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fungsi pemetaan kode cuaca untuk data testing\n",
+    "# weather code mapping function for data testing\n",
     "def weatherTest(i):\n",
     "    if (i < 20):\n",
     "        return 1\n",
@@ -265,7 +265,13 @@
     "    elif (i < 140):\n",
     "        return 7\n",
     "    else:\n",
-    "        return 8"
+    "        return 8\n",
+    "\n",
+    "# mapping for data testing results (X_train)\n",
+    "y_test = np.array([weatherTest(index) for index in range(0, 160)], dtype=int)\n",
+    "y_test.reshape(-1,)\n",
+    "print(y_test.shape)\n",
+    "y_test"
    ]
   }
  ],
@@ -285,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 (tags/v3.10.6:9c7b4bd, Aug  1 2022, 21:53:49) [MSC v.1932 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
