check X_test shape

--- a/main.ipynb
+++ b/main.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,10 @@
     "snow = np.array([resize(np.array(Image.open('./Test/snow/' + filename)) ,(150,200,3)) for filename in os.listdir('./Test/snow')], dtype=float)\n",
     "\n",
     "# X_test result\n",
-    "X_test = np.append(gabung, snow,  0)"
+    "X_test = np.append(gabung, snow,  0)\n",
+    "\n",
+    "# check data testing shape\n",
+    "print(X_test.shape, y_test.shape)"
    ]
   }
  ],
