data testing evaluation

--- a/main.ipynb
+++ b/main.ipynb
@@ -352,14 +352,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5/5 [==============================] - 1s 106ms/step - loss: 0.6753 - accuracy: 0.7812\n"
+      "5/5 [==============================] - 1s 131ms/step - loss: 0.6753 - accuracy: 0.7812\n"
      ]
     },
     {
@@ -368,7 +368,7 @@
        "[0.6753202676773071, 0.78125]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,6 +376,44 @@
    "source": [
     "# evaluation of accuracy and loss using data test\n",
     "cnn.evaluate(X_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/5 [==============================] - 1s 98ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       1.00      0.85      0.92        20\n",
+      "           2       0.88      0.75      0.81        20\n",
+      "           3       0.71      0.75      0.73        20\n",
+      "           4       0.78      0.90      0.84        20\n",
+      "           5       0.60      0.60      0.60        20\n",
+      "           6       0.94      0.85      0.89        20\n",
+      "           7       0.90      0.90      0.90        20\n",
+      "           8       0.54      0.65      0.59        20\n",
+      "\n",
+      "    accuracy                           0.78       160\n",
+      "   macro avg       0.80      0.78      0.79       160\n",
+      "weighted avg       0.80      0.78      0.79       160\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data accuracy per type of weather\n",
+    "from sklearn.metrics import classification_report\n",
+    "y_pred = cnn.predict(X_test)\n",
+    "y_pred_classes = [np.argmax(element) for element in y_pred]\n",
+    "\n",
+    "# data report precision, recall, and f1-score values\n",
+    "print(classification_report(y_test, y_pred_classes))"
    ]
   }
  ],
