--- a/main.ipynb
+++ b/main.ipynb
@@ -419,41 +419,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5/5 [==============================] - 1s 105ms/step\n",
-      "n data X_test menghasilkan y_pred berikut\n",
+      "5/5 [==============================] - 1s 100ms/step\n",
+      "n X_test data produces the following y_pred\n",
       "\n",
-      "0 0 0 0 0 0 0 1 1 1 1 1 1 1 7 2 2 2 2 0 3 3 3 4 3 3 3 2 2 4 4 4 4 4 5 5 5 5 5 5 6 6 6 6 6 3 6 7 4 7 7 4 2 6 "
+      "5  =  0\n",
+      "15  =  0\n",
+      "25  =  1\n",
+      "35  =  1\n",
+      "45  =  2\n",
+      "55  =  0\n",
+      "65  =  3\n",
+      "75  =  3\n",
+      "85  =  4\n",
+      "95  =  4\n",
+      "105  =  5\n",
+      "115  =  5\n",
+      "125  =  6\n",
+      "135  =  3\n",
+      "145  =  2\n",
+      "155  =  7\n"
      ]
     }
    ],
    "source": [
-    "# hasil testing, menggunakan 60 data pertama\n",
+    "# test results\n",
     "n_test = 160\n",
     "y_pred = cnn.predict(X_test)\n",
     "y_pred = [np.argmax(val) for val in y_pred]\n",
-    "print(\"n data X_test menghasilkan y_pred berikut\\n\")\n",
+    "print(\"n X_test data produces the following y_pred\\n\")\n",
     "\n",
-    "for x in range(0, n_test, 3):\n",
-    "  print(y_pred[x], end=\" \")"
+    "for x in range(5, n_test, 10):\n",
+    "  print(x, \" = \", y_pred[x])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n actual y_test data\n",
+      "\n",
+      "5  =  0\n",
+      "15  =  0\n",
+      "25  =  1\n",
+      "35  =  1\n",
+      "45  =  2\n",
+      "55  =  2\n",
+      "65  =  3\n",
+      "75  =  3\n",
+      "85  =  4\n",
+      "95  =  4\n",
+      "105  =  5\n",
+      "115  =  5\n",
+      "125  =  6\n",
+      "135  =  6\n",
+      "145  =  7\n",
+      "155  =  7\n"
+     ]
+    }
+   ],
    "source": [
-    "# hasil actual, menggunakan 60 data pertama\n",
-    "print(\"n data y_test sesungguhnya\\n\")\n",
-    "for x in range(0, 160, 3):\n",
-    "  print(y_pred[x], end=\" \")"
+    "# actual results\n",
+    "print(\"n actual y_test data\\n\")\n",
+    "for x in range(5, n_test, 10):\n",
+    "  print(x, \" = \", y_test[x])"
    ]
   }
  ],
